Updating authors list and changelog
(bzr r129)

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,16 +1,28 @@
-Primary authors:
-  Lauris Kaplinski <lauris@kaplinski.com>
-  Mitsuru Oka
-  Masatake Yamato
-  Frank Felfe
 
-Contributors:
-  Michael Meeks
-  Chema Celorio
-
-Big parts of the code are taken from the works of:
-  Raph Levien
-  Frederico Mena
-
-And numerous smaller parts from all other people.
-
+Hans Breuer
+Bulia Byak
+Chema Celorio
+Zbigniew Chyla
+Robert Crosbie
+Danilo Egan
+Frank Felfe
+Ted Gould
+Bryce Harrington
+Nathan Hurst
+Bob Jamison
+Lauris Kaplinski
+Lynn Kerby
+Petr Kovar
+Raph Levien
+Vitaly Lipatov
+Dmitry G. Mastrukov
+Michael Meeks
+Frederico Mena
+MenTaLguY
+Yukihiro Nakai
+Christian Neumair
+Mitsuru Oka
+Christian Schaller
+Tom von Schwerdtner
+Daniel Yacob
+Masatake Yamato
