Okay, these are the files for the release 0.35
(bzr r144)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,5 @@
+2003-11-10  Ted Gould <ted@gould.cx>
+	* Release 0.35
 
 2003-11-08  Bryce Harrington <brycehar@bryceharrington.com>
 	* Updated About dialog
