Adding Jon, and removing duplicate Tom Ingram :-)
(bzr r170)

--- a/AUTHORS
+++ b/AUTHORS
@@ -4,6 +4,7 @@ Bulia Byak
 Chema Celorio
 Zbigniew Chyla
 Robert Crosbie
+Jon Cruz
 Danilo Egan
 Frank Felfe
 Ted Gould
@@ -27,4 +28,3 @@ Christian Schaller
 Tom von Schwerdtner
 Daniel Yacob
 Masatake Yamato
-Thomas Ingham
