--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2003-11-16  MenTaLguY <mental@rydia.net>
+
+	* src/version.c: ME R DUM.  Had the arguments to sscanf() reversed.
+
 2003-11-16  Ted Gould <ted@gould.cx>
 
 	* Updating everything so that it builds under g++ again.  Much
