Renamed "desactivate" to "deactive"
(bzr r216)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2003-11-16  Kees Cook <inkscape@outflux.net>
+
+	* Cleaned up "desactivate" into "deactivate"
+
 2003-11-16  MenTaLguY <mental@rydia.net>
 
 	* src/version.c: ME R DUM.  Had the arguments to sscanf() reversed.
@@ -4493,16 +4497,16 @@ Sun Mar  3 03:40:07 2002  Mitsuru Oka  <oka326@parkcity.ne.jp>
 
 	* src/sodipodi.c (sodipodi_activate_desktop_private): Default method
 	implementation to chain activation signal on desktop
-	(sodipodi_desactivate_desktop_private): Ditto
+	(sodipodi_deactivate_desktop_private): Ditto
 
 	* src/desktop.c (sp_desktop_new): Owner does not have document pointer
 	any more, so had to change signature here
 	(sp_desktop_widget_init): Moved activation signals to public constructor
 	(sp_dtw_desktop_activate): Activation signal handler
-	(sp_dtw_desktop_desactivate): Ditto
-	(sp_desktop_widget_new): Use desktop "activate" and "desactivate" signals
+	(sp_dtw_desktop_deactivate): Ditto
+	(sp_desktop_widget_new): Use desktop "activate" and "deactivate" signals
 	instead of sodipodi ones, signature change
-	(sp_desktop_class_init): Added "activate" and "desactivate" signals
+	(sp_desktop_class_init): Added "activate" and "deactivate" signals
 
 	* src/dialogs/display-settings.c: Removed glade, made mostly dynamic
 
