Cleaning up CVS warnings
(bzr r220)

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,7 @@
 
 	* Cleaned up "desactivate" into "deactivate"
 	* Fixed GDK_SCROLL event from mouse wheel scrolling
+	* Cleaned up .cvsignore entries for fewer cvs warnings
 
 2003-11-16  MenTaLguY <mental@rydia.net>
 
