--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,7 @@
 	* SF Patch #842949: lpr fixes from Lynn Kerby
 	* SF Patch #842951: variable declaration fixes in interface.c
 	* SF Patch #842953: small color picker update from John Bintz
+	* SF Patch #842955: additional Darwin updates from Peter
 
 2003-11-16  MenTaLguY <mental@rydia.net>
 
