--- a/ChangeLog
+++ b/ChangeLog
@@ -8,6 +8,7 @@
 	* Fixed stroke style literal string bug that caused warnings
 	* SF Patch #842958: updated inkscape.desktop.in slightly
 	* SF Patch #843170: freetype include corrections
+	* SF Patch #843326: fixups for g++ compilation from joncruz
 
 2003-11-16  MenTaLguY <mental@rydia.net>
 
