Fixing tracker 843333 which basically is turning an assert into a user friendly warning.  This way most people should figure out what is going on.
(bzr r249)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2003-11-17 Ted Gould <ted@gould.cx>
+
+	* src/modules/init.c: Changing the process for handeling a directory
+	  that doesn't exist.  Now passing out a warning, and then returning.
+	  The warning is on the command line so most users won't have to deal
+	  with it (it _shouldn't_ happen anyway ;)  Fixes: #843333.
+
 2003-11-17 Kees Cook <inkscape@outflux.net>
 
 	* SF Patch #841940: autoconf update from joncruz
