More attempts to touch every file in the code base.  ;)  Fixing // comments
(bzr r252)

--- a/ChangeLog
+++ b/ChangeLog
@@ -18,6 +18,7 @@
 	* SF Patch #843326: fixups for g++ compilation from joncruz
 	* Adding some more missing "extern C" sections for g++ compiles
 	* Small type corrections to quite g++ during -Wall
+	* Changed all the #endif // __cplusplus into a standard C comment
 
 2003-11-16  MenTaLguY <mental@rydia.net>
 
