--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2003-11-17 Kees Cook <inkscape@outflux.net>
+
+	* configure.in: SF Patch #843537: more cast corrections from joncruz
+
 2003-11-17 Ted Gould <ted@gould.cx>
 
 	* src/modules/init.c: Changing the process for handeling a directory
