--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2003-11-18 Ted Gould <ted@gould.cx>
+
+	* src/modules/extension.c: Changing mkstemp to g_mkstemp for
+	compatibility.
+
 2003-11-17 Kees Cook <inkscape@outflux.net>
 
 	* configure.in: SF Patch #843537: more cast corrections from joncruz
