--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,14 @@
+2003-11-25 bulia byak <bulia@dr.com>
+
+	* src/dialogs/dialog-events.c src/dialogs/dialog-events.h: new callback and utility
+	  functions for defocusing
+	* src/widgets/sp-color-selector.c src/widgets/dash-selector.c
+	   src/dialogs/stroke-style.c: spinbuttons, text fields defocus on enter
+
 2003-11-24 bulia byak <bulia@dr.com>
 
-	* src/dialogs/display-settings.c src/display/canvas-arena.c: cursor tolerance now stored in preferences, default changed to 2.0
+	* src/dialogs/display-settings.c src/display/canvas-arena.c: cursor tolerance now
+	  stored in preferences, default changed to 2.0
 
 2003-11-24 bulia byak <bulia@dr.com>
 
