--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2003-11-27 MenTaLguY <mental@rydia.net>
+
+	* src/desktop.c: the coord status bar area should not have a
+	  resize handle
+
 2003-11-27 bulia byak <bulia@dr.com>
 
 	* all dialogs remember size and position across sessions
