--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2003-11-30  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>
+
+	* src/modules/system.c (sp_module_system_save): Partial fix for
+	  unrecognized filetype: show a CRITICAL warning instead of
+	  segfaulting (uninitialized var).
+
 2003-11-29 Kees Cook <inkscape@outflux.net>
 
 	* src/utest/.cvsignore: adding "Makefile"
