Removing boldness: does ugly things to the html version (title has <b></b> tags)
(bzr r387)

--- a/inkscape.pod
+++ b/inkscape.pod
@@ -1,7 +1,7 @@
 
 =head1 NAME
 
-B<Inkscape> - a 2D vector graphics editing program.
+Inkscape - a 2D vector graphics editing program.
 
 =head1 SYNOPSIS
 
