--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,9 @@
 
 	* src/toolbox.c: made tool buttons larger, aux buttons smaller
 
+	* src/document-undo.c: fixed bug with undo/redo past the
+	  beginning/end of the undo history
+
 2003-11-29  bulia byak <bulia@dr.com>
 
 	* src/selection-ch emistry.c src/selection-chemistry.h src/verbs.c src/verbs.h
