reworked toolbars just a bit
(bzr r416)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2003-12-04  MenTaLguY <mental@rydia.net>
+
+	* src/desktop.c: rearranged toolbars so aux toolbar is topmost
+	* src/toolbox.c: made toolbars detachable
+
 2003-12-02  bulia byak <bulia@dr.com>
 
 	* src/file.c: made open and save dialogs modal and transient
