--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,8 @@
 
 	* src/extension.c: removed _some_ #ifdef WIN32 insanity (we still need a portable popen())
 
+	* configure.in, src/main.c: removed freebsd-specific test and just check for fpsetmask() instead
+
 2003-12-04  bulia byak <bulia@dr.com>
 
 	* src/toolbox.c: added convert to curves button, cosmetic changes in aux toolbar
