--- a/inkscape.pod
+++ b/inkscape.pod
@@ -155,6 +155,9 @@ SVG:
 
 B<DISPLAY> to get the default host and display number.
 
+B<TMPDIR> to set the default path of the directory to use for temporary
+files.  The directory must exist.
+
 =head1 FILES
 
 B<$HOME>/.inkscape/preferences.xml - The user's preference settings. 
