--- a/inkscape.pod
+++ b/inkscape.pod
@@ -175,7 +175,7 @@ the latest released version of the program, and more.
 =head1 SEE ALSO
 
 gimp(1), autotrace, frontline, ill2svg, rsvg(1), xfig(1), sodipodi,
-karbon14, dia(1X).
+karbon14, dia(1X), batik.
 
 =head1 NOTES
 
