Adding 'Scalable' to title
(bzr r438)

--- a/inkscape.pod
+++ b/inkscape.pod
@@ -1,7 +1,7 @@
 
 =head1 NAME
 
-Inkscape - a 2D vector graphics editing program.
+Inkscape - a 2D Scalable Vector Graphics editing program.
 
 =head1 SYNOPSIS
 
