--- a/ChangeLog
+++ b/ChangeLog
@@ -7,6 +7,10 @@
 	  g_signal_handlers_{un,}block...() on it rather than the stupid
 	  semaphore counter thing I had originally.
 
+	  Also switched to sp_icon_new() instead of sp_icon_new_scaled(), as
+	  otherwise the small icons were too small (but the large icons are
+	  now smaller than they could be... darn it... ><)
+
 2003-12-05 MenTaLguY <mental@rydia.net>
 
 	* src/widgets/icon.c, src/widgets/button.c, src/widgets/button.h, src/toolbox.c:
